# HodEngineThirdParty

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  build_linux_x64.sh  build_macos_arm64.sh  build_win_arm64.bat  build_win_x64.bat  build_windows_arm64.bat  build_windows_x64.bat
Install/: .gitignore
Install/Android_arm64-v8a/Benchmark/lib/pkgconfig/: benchmark.pc
Install/Android_arm64-v8a/Freetype/lib/pkgconfig/: freetype2.pc
Install/Android_arm64-v8a/lib/pkgconfig/: benchmark.pc  benchmark_main.pc  fmt.pc  freetype2.pc  gmock.pc  gmock_main.pc  gtest.pc  gtest_main.pc
Install/Android_arm64-v8a/share/cmake/VulkanMemoryAllocator/: VulkanMemoryAllocatorConfig.cmake
Install/Android_x86_64/Gtest/lib/pkgconfig/: gtest_main.pc
Install/Android_x86_64/lib/cmake/GTest/: GTestTargets.cmake
Install/Android_x86_64/lib/pkgconfig/: benchmark.pc  benchmark_main.pc  fmt.pc  freetype2.pc  gmock.pc  gmock_main.pc  gtest.pc  gtest_main.pc
Install/Linux_x64/cmake/: slangTargets-release.cmake  slangTargets.cmake
Install/Linux_x64/lib/pkgconfig/: gmock.pc  gtest.pc  spirv-cross-c.pc
Install/MacOs_arm64/Benchmark/lib/pkgconfig/: benchmark.pc  benchmark_main.pc
Install/MacOs_arm64/Fmt/lib/pkgconfig/: fmt.pc
Install/MacOs_arm64/Slang/lib/: libslang-rt.0.2025.24.2.dylib  libslang-rt.dylib
Install/MacOs_arm64/Slang/lib/cmake/slang/: slangTargets.cmake
Install/MacOs_arm64/cmake/: slangConfigVersion.cmake  slangTargets-release.cmake  slangTargets.cmake
Install/MacOs_arm64/lib/: libgfx.dylib  libslang-compiler.0.2025.24.2.dylib  libslang-glsl-module-2025.24.2.dylib  libslang-glsl-module.dylib  libslang-glslang-2025.24.2.dylib  libslang-rt.0.2025.24.2.dylib  libslang-rt.dylib
Install/MacOs_arm64/lib/cmake/GTest/: GTestTargets.cmake
Install/MacOs_arm64/lib/cmake/slang/: slangTargets.cmake
Install/MacOs_arm64/lib/pkgconfig/: fmt.pc  freetype2.pc  gmock.pc  gmock_main.pc  gtest.pc  gtest_main.pc  spirv-cross-c.pc
Install/MacOs_arm64/lib/slang-standard-module-2025.24.2/: neural.slang-module
Install/MacOs_arm64/share/cmake/VulkanMemoryAllocator/: VulkanMemoryAllocatorConfig.cmake
Install/MacOs_arm64/share/spirv_cross_c/cmake/: spirv_cross_cConfig.cmake
Install/MacOs_arm64/share/spirv_cross_core/cmake/: spirv_cross_coreConfig.cmake
Install/MacOs_arm64/share/spirv_cross_glsl/cmake/: spirv_cross_glslConfig.cmake
Install/MacOs_arm64/share/spirv_cross_reflect/cmake/: spirv_cross_reflectConfig.cmake
Install/MacOs_arm64/share/spirv_cross_util/cmake/: spirv_cross_utilConfig.cmake
Install/Win_arm64/Benchmark/lib/: benchmark_main.lib
Install/Win_arm64/Benchmark/lib/pkgconfig/: benchmark_main.pc
Install/Win_arm64/Box2d/lib/: box2d.lib
Install/Win_arm64/Fmt/lib/: fmt.lib
Install/Win_arm64/Gtest/lib/: gmock.lib  gtest_main.lib
Install/Win_arm64/Slang/cmake/: slangConfigVersion.cmake  slangTargets.cmake
Install/Win_arm64/Slang/lib/: slang-compiler.lib
Install/Win_arm64/lib/: box2d.lib
Install/Win_x64/Benchmark/lib/: benchmark.lib  benchmark_main.lib
Install/Win_x64/Box2d/lib/: box2d.lib
Install/Win_x64/Fmt/lib/: fmt.lib
Install/Win_x64/Freetype/lib/: freetype.lib
Install/Win_x64/Gtest/lib/: gmock.lib  gmock_main.lib  gtest.lib  gtest_main.lib
Install/Win_x64/Slang/cmake/: slangTargets-release.cmake
Install/Win_x64/cmake/: slangTargets-release.cmake  slangTargets.cmake
Install/Win_x64/lib/: GenericCodeGen.lib  MachineIndependent.lib  OSDependent.lib  SPIRV.lib  benchmark.lib  benchmark_main.lib  box2d.lib  fmt.lib  freetype.lib  gfx.lib  glslang-default-resource-limits.lib  glslang.lib  gmock.lib  gmock_main.lib  gtest.lib  gtest_main.lib  slang-compiler.lib  slang-rt.lib  slang.lib  spirv-cross-c.lib  spirv-cross-core.lib  spirv-cross-glsl.lib  spirv-cross-reflect.lib  spirv-cross-util.lib
Install/Win_x64/lib/cmake/GTest/: GTestTargets.cmake
Install/Win_x64/lib/cmake/box2d/: box2dConfig.cmake
Install/Win_x64/lib/cmake/fmt/: fmt-targets.cmake
Install/Win_x64/lib/cmake/glslang/: glslang-targets.cmake
Install/Win_x64/lib/pkgconfig/: benchmark.pc  benchmark_main.pc  fmt.pc  freetype2.pc  gmock.pc  gmock_main.pc  gtest.pc  gtest_main.pc  spirv-cross-c.pc
Install/Win_x64/share/cmake/VulkanMemoryAllocator/: VulkanMemoryAllocatorConfig.cmake
Install/Win_x64/share/spirv_cross_c/cmake/: spirv_cross_cConfig.cmake
Install/Win_x64/share/spirv_cross_core/cmake/: spirv_cross_coreConfig.cmake
Install/Win_x64/share/spirv_cross_glsl/cmake/: spirv_cross_glslConfig.cmake
Install/Win_x64/share/spirv_cross_reflect/cmake/: spirv_cross_reflectConfig.cmake
Install/Win_x64/share/spirv_cross_util/cmake/: spirv_cross_utilConfig.cmake
Install/android/arm64-v8a/Fmt/lib/pkgconfig/: fmt.pc
Install/macos/arm64/Slang/lib/: libslang.dylib
Install/windows/arm64/Benchmark/lib/: benchmark.lib
Install/windows/arm64/Freetype/lib/: freetype.lib
Install/windows/arm64/Gtest/lib/: gmock_main.lib  gtest.lib
Install/windows/x64/Fmt/lib/: fmt.lib
Install/windows/x64/Freetype/lib/: freetype.lib
install/linux/x64/include/Slang/: slang-tag-version.h
install/linux/x64/lib/pkgconfig/: freetype2.pc  gmock_main.pc  gtest_main.pc
install/macos/arm64/Slang/lib/: libslang-compiler.0.2025.24.2.dylib  libslang-compiler.dylib  libslang-glsl-module-2025.24.2.dylib  libslang-glslang-2025.24.2.dylib  libslang-rt.0.2025.24.2.dylib  libslang-rt.dylib
install/windows/AMD64/Benchmark/lib/: benchmark.lib  benchmark_main.lib
install/windows/AMD64/Box2d/lib/: box2d.lib
install/windows/AMD64/EnkiTS/lib/: enkiTS.lib
install/windows/AMD64/Fmt/lib/: fmt.lib
install/windows/AMD64/Freetype/lib/: freetype.lib
install/windows/AMD64/Gtest/lib/: gmock.lib  gmock_main.lib  gtest.lib  gtest_main.lib
install/windows/AMD64/Slang/lib/: slang-rt.lib
install/windows/AMD64/xxHash/lib/: xxhash.lib
install/windows/AMD64/zstd/lib/: zstd_static.lib
install/windows/x64/Box2d/lib/: box2d.lib
install/windows/x64/Gtest/lib/: gtest_main.lib
install/windows/x64/Slang/lib/: slang.lib
install/windows/x64/VulkanLoader/lib/: vulkan-1.lib
(+61 files in other folders)
