cmake_minimum_required(VERSION 3.10)

project(HodEngineThirdParty)

include(ExternalProject)

set(CMAKE_POSITION_INDEPENDENT_CODE ON CACHE BOOL "" FORCE)

if(APPLE)
	set(CMAKE_OSX_DEPLOYMENT_TARGET "14" CACHE STRING "" FORCE)
endif()

if(ANDROID)
	set(CMAKE_TOOLCHAIN_FILE "${CMAKE_TOOLCHAIN_FILE}" CACHE FILEPATH "" FORCE)
	set(ANDROID_ABI "${ANDROID_ABI}" CACHE STRING "" FORCE)
	set(ANDROID_PLATFORM "${ANDROID_PLATFORM}" CACHE STRING "" FORCE)
endif()

set(CMAKE_INSTALL_INCLUDEDIR "include" CACHE PATH "" FORCE)
set(CMAKE_INSTALL_LIBDIR "lib" CACHE PATH "" FORCE)
set(CMAKE_INSTALL_BINDIR "bin" CACHE PATH "" FORCE)

# Box2d
set(BOX2D_SAMPLES OFF CACHE BOOL "" FORCE)
set(BOX2D_VALIDATE OFF CACHE BOOL "" FORCE)
set(BOX2D_UNIT_TESTS OFF CACHE BOOL "" FORCE)
set(BOX2D_AVX2 OFF CACHE BOOL "" FORCE) # TODO: crash on Android
add_subdirectory(Source/Box2d)
#PROJECT_IS_TOP_LEVEL in Box2d'CMakeLists block include copy
install( 
	DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Source/Box2d/include/box2d"
	DESTINATION include
)

# Freetype
set(FT_DISABLE_BROTLI ON CACHE BOOL "" FORCE)
set(FT_DISABLE_HARFBUZZ ON CACHE BOOL "" FORCE)
set(FT_DISABLE_PNG ON CACHE BOOL "" FORCE)
set(FT_DISABLE_BZIP2 ON CACHE BOOL "" FORCE)
set(FT_DISABLE_ZLIB ON CACHE BOOL "" FORCE)
add_subdirectory(Source/Freetype)

if (WIN32 OR ANDROID OR LINUX)
	# VulkanMemoryAllocator
	set(VMA_ENABLE_INSTALL ON CACHE BOOL "" FORCE)
	set(VMA_BUILD_DOCUMENTATION OFF CACHE BOOL "" FORCE)
	set(CMAKE_INSTALL_INCLUDEDIR "include/VulkanMemoryAllocator" CACHE PATH "" FORCE)
	add_subdirectory(Source/VulkanMemoryAllocator)
endif()

# Slang
set(SLANG_ENABLE_SLANGD OFF CACHE BOOL "" FORCE)
set(SLANG_ENABLE_GFX OFF CACHE BOOL "" FORCE)
set(SLANG_ENABLE_SLANG_RHI OFF CACHE BOOL "" FORCE)
set(SLANG_ENABLE_SLANGI OFF CACHE BOOL "" FORCE)
set(SLANG_ENABLE_TESTS OFF CACHE BOOL "" FORCE)
set(SLANG_ENABLE_EXAMPLES OFF CACHE BOOL "" FORCE)
set(SLANG_ENABLE_REPLAYER OFF CACHE BOOL "" FORCE)
set(SLANG_SLANG_LLVM_FLAVOR DISABLE CACHE BOOL "" FORCE)
set(CMAKE_INSTALL_INCLUDEDIR "include/Slang" CACHE PATH "" FORCE)
add_subdirectory(Source/Slang)

# Fmt
set(FMT_INSTALL ON CACHE BOOL "" FORCE)
set(CMAKE_INSTALL_INCLUDEDIR "include" CACHE PATH "" FORCE)
add_subdirectory(Source/Fmt)

# Stb
install(
	DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Source/Stb/"
	DESTINATION include/Stb
	FILES_MATCHING
	PATTERN "*.h"
)

if (WIN32)
	# WindowsHModular
	install(
		DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Source/WindowsHModular/include/win32"
		DESTINATION include
		FILES_MATCHING
		PATTERN "*.h"
	)
endif()

# PortableFileDialogs
install(
	DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Source/PortableFileDialogs"
	DESTINATION include
	FILES_MATCHING
	PATTERN "*.h"
)

if (APPLE)
	ExternalProject_Add(
		MetalCpp
		URL https://developer.apple.com/metal/cpp/files/metal-cpp_macOS15.2_iOS18.2.zip
		CONFIGURE_COMMAND ""
		BUILD_COMMAND ""
		INSTALL_COMMAND ""
		SOURCE_DIR ${CMAKE_BINARY_DIR}/metal-cpp-src
	)

	ExternalProject_Get_Property(MetalCpp SOURCE_DIR)
	message(STATUS "MetalCpp: ${SOURCE_DIR}")

	install(
		DIRECTORY ${SOURCE_DIR}/Metal
		DESTINATION include
		FILES_MATCHING
		PATTERN "*.hpp"
	)

	install(
		DIRECTORY ${SOURCE_DIR}/Foundation
		DESTINATION include
		FILES_MATCHING
		PATTERN "*.hpp"
	)

	install(
		DIRECTORY ${SOURCE_DIR}/QuartzCore
		DESTINATION include
		FILES_MATCHING
		PATTERN "*.hpp"
	)
endif()

# Gtest
set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
set(CMAKE_INSTALL_INCLUDEDIR "include/Gtest" CACHE PATH "" FORCE)
add_subdirectory(Source/Gtest)

# Google Benchmark
set(BENCHMARK_ENABLE_TESTING OFF CACHE BOOL "" FORCE)
set(BENCHMARK_ENABLE_INSTALL ON CACHE BOOL "" FORCE)
set(BENCHMARK_INSTALL_DOCS OFF CACHE BOOL "" FORCE)
set(BENCHMARK_INSTALL_TOOLS OFF CACHE BOOL "" FORCE)
set(CMAKE_INSTALL_INCLUDEDIR "include" CACHE PATH "" FORCE)
add_subdirectory(Source/Benchmark)
