cmake_minimum_required(VERSION 3.25)
project(HodEngineThirdParty)
include(ExternalProject)

set(COMMON_CMAKE_ARGS
	-DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
	-DCMAKE_POSITION_INDEPENDENT_CODE=ON
	-DCMAKE_C_COMPILER:FILEPATH=${CMAKE_C_COMPILER}
	-DCMAKE_CXX_COMPILER:FILEPATH=${CMAKE_CXX_COMPILER}
	-DCMAKE_MAKE_PROGRAM:FILEPATH=${CMAKE_MAKE_PROGRAM}
)

if(CMAKE_TOOLCHAIN_FILE)
	list(APPEND COMMON_CMAKE_ARGS -DANDROID_USE_LEGACY_TOOLCHAIN_FILE=OFF -DCMAKE_TOOLCHAIN_FILE:FILEPATH=${CMAKE_TOOLCHAIN_FILE})
endif()

if(ANDROID)
	list(APPEND COMMON_CMAKE_ARGS
		-DANDROID_ABI=${ANDROID_ABI}
		-DANDROID_PLATFORM=${ANDROID_PLATFORM}
	)
endif()

if(APPLE)
	list(APPEND COMMON_CMAKE_ARGS -DCMAKE_OSX_DEPLOYMENT_TARGET=14)
endif()

# Box2d
ExternalProject_Add(Box2d
	SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/Source/Box2d"
	CMAKE_ARGS
		${COMMON_CMAKE_ARGS}
		-DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX}/Box2d
		-DCMAKE_INSTALL_LIBDIR=lib
		-DBOX2D_SAMPLES=OFF
		-DBOX2D_VALIDATE=OFF
		-DBOX2D_UNIT_TESTS=OFF
		-DBOX2D_AVX2=OFF # TODO: crash on Android
)

# Freetype
ExternalProject_Add(Freetype
	SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/Source/Freetype"
	CMAKE_ARGS
		${COMMON_CMAKE_ARGS}
		-DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX}/Freetype
		-DFT_DISABLE_BROTLI=ON
		-DFT_DISABLE_HARFBUZZ=ON
		-DFT_DISABLE_PNG=ON
		-DFT_DISABLE_BZIP2=ON
		-DFT_DISABLE_ZLIB=ON
)

if(WIN32 OR LINUX OR ANDROID)
	# VulkanHeaders
	ExternalProject_Add(VulkanHeaders
		SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/Source/VulkanHeaders"
		CMAKE_ARGS
			${COMMON_CMAKE_ARGS}
			-DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX}/VulkanHeaders
			-DVULKAN_HEADERS_ENABLE_MODULE=OFF
	)

	# VulkanMemoryAllocator
	ExternalProject_Add(VulkanMemoryAllocator
		SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/Source/VulkanMemoryAllocator"
		CMAKE_ARGS
			${COMMON_CMAKE_ARGS}
			-DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX}/VulkanMemoryAllocator
			-DVMA_ENABLE_INSTALL=ON
			-DVMA_BUILD_DOCUMENTATION=OFF
	)

	# SpirvHeaders
	ExternalProject_Add(SpirvHeaders
		SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/Source/SpirvHeaders"
		CMAKE_ARGS
			${COMMON_CMAKE_ARGS}
			-DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX}/SpirvHeaders
			-DSPIRV_HEADERS_SKIP_EXAMPLES=ON
			-DSPIRV_HEADERS_SKIP_TESTS=ON
	)

	# SpirvTools
	ExternalProject_Add(SpirvTools
		SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/Source/SpirvTools"
		CMAKE_ARGS
			${COMMON_CMAKE_ARGS}
			-DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX}/SpirvTools
			-DSPIRV-Headers_SOURCE_DIR=${CMAKE_CURRENT_SOURCE_DIR}/Source/SpirvHeaders
			-DSPIRV_SKIP_TESTS=ON
			-DSPIRV_SKIP_EXECUTABLES=ON
		DEPENDS SpirvHeaders
	)

	# VulkanUtilityLibraries
	ExternalProject_Add(VulkanUtilityLibraries
		SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/Source/VulkanUtilityLibraries"
		CMAKE_ARGS
			${COMMON_CMAKE_ARGS}
			-DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX}/VulkanUtilityLibraries
			-DVULKAN_HEADERS_INSTALL_DIR=${CMAKE_INSTALL_PREFIX}/VulkanHeaders
			-DBUILD_TESTS=OFF
		DEPENDS VulkanHeaders
	)

	# VulkanValidationLayers
	# UPDATE_DEPS=OFF: disable internal dep builder that misdetects Android x86_64 as 32-bit.
	# All deps are provided via *_INSTALL_DIR / *_SOURCE_DIR variables.
	ExternalProject_Add(VulkanValidationLayers
		SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/Source/VulkanValidationLayers"
		CMAKE_ARGS
			${COMMON_CMAKE_ARGS}
			-DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX}/VulkanValidationLayers
			-DBUILD_TESTS=OFF
			-DBUILD_WERROR=OFF
			-DUPDATE_DEPS=OFF
			-DVULKAN_HEADERS_INSTALL_DIR=${CMAKE_INSTALL_PREFIX}/VulkanHeaders
			-DSPIRV_HEADERS_INSTALL_DIR=${CMAKE_INSTALL_PREFIX}/SpirvHeaders
			-DSPIRV_TOOLS_INSTALL_DIR=${CMAKE_INSTALL_PREFIX}/SpirvTools
			-DVULKAN_UTILITY_LIBRARIES_INSTALL_DIR=${CMAKE_INSTALL_PREFIX}/VulkanUtilityLibraries
		DEPENDS VulkanHeaders SpirvHeaders SpirvTools VulkanUtilityLibraries
	)
endif()
if(WIN32 OR LINUX)
	# VulkanLoader
	ExternalProject_Add(VulkanLoader
		SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/Source/VulkanLoader"
		CMAKE_ARGS
			${COMMON_CMAKE_ARGS}
			-DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX}/VulkanLoader
			-DVULKAN_HEADERS_INSTALL_DIR=${CMAKE_INSTALL_PREFIX}/VulkanHeaders
			-DBUILD_TESTS=OFF
		DEPENDS VulkanHeaders
	)
endif()

if(NOT ANDROID)
	# Slang
	ExternalProject_Add(Slang
		SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/Source/Slang"
		CMAKE_ARGS
			${COMMON_CMAKE_ARGS}
			-DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX}/Slang
			-DSLANG_ENABLE_SLANGD=OFF
			-DSLANG_ENABLE_GFX=OFF
			-DSLANG_ENABLE_SLANG_RHI=OFF
			-DSLANG_ENABLE_SLANGI=OFF
			-DSLANG_ENABLE_TESTS=OFF
			-DSLANG_ENABLE_EXAMPLES=OFF
			-DSLANG_ENABLE_REPLAYER=OFF
			-DSLANG_SLANG_LLVM_FLAVOR=DISABLE
	)
endif()

# EnkiTS
ExternalProject_Add(EnkiTS
	SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/Source/EnkiTS"
	CMAKE_ARGS
		${COMMON_CMAKE_ARGS}
		-DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX}/EnkiTS
		-DENKITS_INSTALL=ON
		-DENKITS_BUILD_EXAMPLES=OFF
		-DENKITS_BUILD_C_INTERFACE=OFF
)

# Fmt
ExternalProject_Add(Fmt
	SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/Source/Fmt"
	CMAKE_ARGS
		${COMMON_CMAKE_ARGS}
		-DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX}/Fmt
		-DFMT_INSTALL=ON
		-DFMT_TEST=OFF
		-DFMT_DOC=OFF
)

# Gtest
ExternalProject_Add(Gtest
	SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/Source/Gtest"
	CMAKE_ARGS
		${COMMON_CMAKE_ARGS}
		-DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX}/Gtest
		-Dgtest_force_shared_crt=ON
)

# Benchmark
ExternalProject_Add(Benchmark
	SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/Source/Benchmark"
	CMAKE_ARGS
		${COMMON_CMAKE_ARGS}
		-DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX}/Benchmark
		-DBENCHMARK_ENABLE_TESTING=OFF
		-DBENCHMARK_ENABLE_INSTALL=ON
		-DBENCHMARK_INSTALL_DOCS=OFF
		-DBENCHMARK_INSTALL_TOOLS=OFF
)

# Stb (header-only)
install(
	DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Source/Stb/"
	DESTINATION "Stb/include"
	FILES_MATCHING PATTERN "*.h"
)

# PortableFileDialogs (header-only)
install(
	DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Source/PortableFileDialogs/"
	DESTINATION "PortableFileDialogs/include"
	FILES_MATCHING PATTERN "*.h"
)

if(WIN32)
	# WindowsHModular (header-only)
	install(
		DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Source/WindowsHModular/include/win32"
		DESTINATION "WindowsHModular/include"
		FILES_MATCHING PATTERN "*.h"
	)
endif()

if(APPLE)
	# MetalCpp (downloaded at configure time)
	ExternalProject_Add(MetalCpp
		URL https://developer.apple.com/metal/cpp/files/metal-cpp_macOS15.2_iOS18.2.zip
		CONFIGURE_COMMAND ""
		BUILD_COMMAND ""
		INSTALL_COMMAND ""
		SOURCE_DIR ${CMAKE_BINARY_DIR}/metal-cpp-src
	)

	ExternalProject_Get_Property(MetalCpp SOURCE_DIR)

	install(
		DIRECTORY ${SOURCE_DIR}/Metal
		DESTINATION "MetalCpp/include"
		FILES_MATCHING PATTERN "*.hpp"
	)
	install(
		DIRECTORY ${SOURCE_DIR}/Foundation
		DESTINATION "MetalCpp/include"
		FILES_MATCHING PATTERN "*.hpp"
	)
	install(
		DIRECTORY ${SOURCE_DIR}/QuartzCore
		DESTINATION "MetalCpp/include"
		FILES_MATCHING PATTERN "*.hpp"
	)
endif()

# xxHash
ExternalProject_Add(xxHash
	SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/Source/xxHash"
	SOURCE_SUBDIR cmake_unofficial
	CMAKE_ARGS
		${COMMON_CMAKE_ARGS}
		-DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX}/xxHash
		-DXXHASH_BUILD_XXHSUM=OFF
		-DBUILD_SHARED_LIBS=OFF
		-DDISPATCH=OFF
)
